kubernetes/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongodb-deployment
    labels:
        app: mongodb
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mongodb
    template:
        metadata:
            labels:
                app: mongodb
        spec:
            containers:
                - name: mongodb
                  image: mongo:latest
                  ports:
                      - containerPort: 27017
                  volumeMounts:
                      - name: mongodb-storage
                        mountPath: /data/db
            volumes:
                - name: mongodb-storage
                  persistentVolumeClaim:
                      claimName: mongodb-pvc
---
apiVersion: v1
kind: Service
metadata:
    name: mongodb-service
spec:
    selector:
        app: mongodb
    ports:
        - protocol: TCP
          port: 27017
          targetPort: 27017
